--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.56.1",
-    "@types/node": "^24.10.1"
+    "@types/node": "^24.10.1",
+    "allure-commandline": "^2.34.1",
+    "allure-playwright": "^3.4.2"
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0"
