--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "devDependencies": {
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.1",
-    "allure-commandline": "^2.34.1",
-    "allure-playwright": "^3.4.2"
+    "ortoni-report": "^4.0.1"
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0"
