--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.1",
     "ortoni-report": "^4.0.1"
-  },
-  "dependencies": {
-    "@faker-js/faker": "^10.1.0"
   }
 }
