--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,5 @@
 name: Playwright Tests
+
 on:
   push:
     branches: [ main, master ]
@@ -26,18 +27,34 @@ jobs:
     - name: Run Playwright tests
       run: npx playwright test
 
-    - name: Upload Playwright HTML Report
-      uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-html-report
-        path: playwright-report/
-        retention-days: 30
+    # -----------------------------------------
+    # Upload core report folders
+    # -----------------------------------------
+
+    # - name: Upload Playwright HTML Report
+    #   uses: actions/upload-artifact@v4
+    #   if: ${{ always() }}
+    #   with:
+    #     name: playwright-html-report
+    #     path: playwright-report/
+    #     retention-days: 30
 
     - name: Upload Ortoni Report
       uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+      if: ${{ always() }}
       with:
         name: ortoni-report
         path: my-report/
+        retention-days: 30
+
+    # -----------------------------------------
+    # REQUIRED IF base64Image = false
+    # (Otherwise screenshot links break)
+    # -----------------------------------------
+    - name: Upload Playwright Test Results (screenshots/videos/traces)
+      uses: actions/upload-artifact@v4
+      if: ${{ always() }}
+      with:
+        name: playwright-artifacts
+        path: test-results/
         retention-days: 30
