--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,50 +1,72 @@
 name: Playwright Tests
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  workflow_dispatch:
+    inputs:
+      env:
+        description: "Select Environment"
+        required: true
+        default: "QAT"
+        type: choice
+        options:
+          - QAT
+          - UAT
 
 jobs:
   test:
-    timeout-minutes: 60
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     steps:
-    - uses: actions/checkout@v4
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
+      # Setup Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-    - name: Install dependencies
-      run: npm ci
+      # Install dependencies
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      # Install Playwright browsers
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
-    - name: Run Playwright tests
-      run: npx playwright test
+      # Set environment-specific secrets
+      - name: Set environment secrets
+        run: |
+          if [ "${{ github.event.inputs.env }}" = "QAT" ]; then
+            echo "USERNAME=${{ secrets.LOGIN_USERNAME_QAT }}" >> $GITHUB_ENV
+            echo "PASSWORD=${{ secrets.LOGIN_PASSWORD_QAT }}" >> $GITHUB_ENV
+          elif [ "${{ github.event.inputs.env }}" = "UAT" ]; then
+            echo "USERNAME=${{ secrets.LOGIN_USERNAME_UAT }}" >> $GITHUB_ENV
+            echo "PASSWORD=${{ secrets.LOGIN_PASSWORD_UAT }}" >> $GITHUB_ENV
+          fi
 
-    # ----------------------------------------------------
-    # Upload Ortoni report
-    # ----------------------------------------------------
-    - name: Upload Ortoni Report
-      uses: actions/upload-artifact@v4
-      if: ${{ always() }}
-      with:
-        name: ortoni-report
-        path: my-report/
-        retention-days: 30
+      # Run Playwright tests
+      - name: Run Playwright Tests
+        run: |
+          echo "Running Playwright tests on environment: ${{ github.event.inputs.env }}"
+          npx playwright test --project=Ally_chromium
 
-    # ----------------------------------------------------
-    # Upload Playwright test artifacts (screenshots, videos, traces)
-    # ----------------------------------------------------
-    - name: Upload Playwright Test Results
-      uses: actions/upload-artifact@v4
-      if: ${{ always() }}
-      with:
-        name: playwright-artifacts
-        path: test-results/
-        retention-days: 30
+      # Upload Ortoni report
+      - name: Upload Ortoni Report
+        uses: actions/upload-artifact@v4
+        if: ${{ always() }}
+        with:
+          name: ortoni-report
+          path: my-report/
+          retention-days: 30
+
+      # Upload Playwright artifacts (screenshots, videos, traces)
+      - name: Upload Playwright Test Results
+        uses: actions/upload-artifact@v4
+        if: ${{ always() }}
+        with:
+          name: playwright-artifacts
+          path: test-results/
+          retention-days: 30
