--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,7 +17,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    # All secrets defined globally
+    # Define all secrets globally
     env:
       USERNAME_DEV: ${{ secrets.LOGIN_USERNAME_DEV }}
       PASSWORD_DEV: ${{ secrets.LOGIN_PASSWORD_DEV }}
@@ -31,6 +31,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+
+      - name: Clean previous reports
+        run: |
+          rm -rf my-report/
+          rm -rf playwright-report/
+          rm -rf test-results/
 
       - run: npm ci
       - run: npx playwright install --with-deps
@@ -65,16 +71,30 @@ jobs:
           echo "Running Playwright tests on environment: $TEST_ENV"
           npx playwright test
 
+      # Upload Ortoni report
       - name: Upload Ortoni Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: ortoni-report
           path: my-report/
+          retention-days: 30
 
+      # Upload Playwright HTML report
+      - name: Generate and Upload Playwright HTML Report
+        run: npx playwright show-report playwright-report || true
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-html-report
+          path: playwright-report/
+          retention-days: 30
+
+      # Upload Playwright test artifacts (screenshots, videos, traces)
       - name: Upload Playwright Test Results
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-artifacts
           path: test-results/
+          retention-days: 31
