--- a/config/uat.env
+++ b/config/uat.env
@@ -1,3 +1,3 @@
-BASE_URL=https://ally.uat.anddone.com/#/login
+BASE_URL=https://ally.uat.anddone.com
 USERNAME=Allytestuser01v12
 PASSWORD=123*Qwertyuiop
