--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,18 +17,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    # Define all secrets globally
-    env:
-      USERNAME_DEV: ${{ secrets.LOGIN_USERNAME_DEV }}
-      PASSWORD_DEV: ${{ secrets.LOGIN_PASSWORD_DEV }}
-      USERNAME_QAT: ${{ secrets.LOGIN_USERNAME_QAT }}
-      PASSWORD_QAT: ${{ secrets.LOGIN_PASSWORD_QAT }}
-      USERNAME_UAT: ${{ secrets.LOGIN_USERNAME_UAT }}
-      PASSWORD_UAT: ${{ secrets.LOGIN_PASSWORD_UAT }}
-
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
 
@@ -37,61 +29,45 @@ jobs:
           rm -rf my-report/
           rm -rf playwright-report/
           rm -rf test-results/
+
       - run: npm ci
       - run: npx playwright install --with-deps
 
-      # Map username/password based on selected environment
-      - name: Set ENV specific USERNAME/PASSWORD
-        env:
-          TEST_ENV: ${{ github.event.inputs.env }}
+      # ✅ Correct way to map secrets
+      - name: Set environment variables
         run: |
-          echo "Selected environment: $TEST_ENV"
-          case "$TEST_ENV" in
+          ENV_SELECTED="${{ github.event.inputs.env }}"
+          echo "Selected environment: $ENV_SELECTED"
+
+          case "$ENV_SELECTED" in
             DEV)
-              echo "USERNAME=${USERNAME_DEV}" >> $GITHUB_ENV
-              echo "PASSWORD=${PASSWORD_DEV}" >> $GITHUB_ENV
+              echo "ENV=dev" >> $GITHUB_ENV
+              echo "BASE_URL=${{ secrets.BASE_URL_DEV }}" >> $GITHUB_ENV
+              echo "USERNAME=${{ secrets.LOGIN_USERNAME_DEV }}" >> $GITHUB_ENV
+              echo "PASSWORD=${{ secrets.LOGIN_PASSWORD_DEV }}" >> $GITHUB_ENV
               ;;
             QAT)
-              echo "USERNAME=${USERNAME_QAT}" >> $GITHUB_ENV
-              echo "PASSWORD=${PASSWORD_QAT}" >> $GITHUB_ENV
+              echo "ENV=qat" >> $GITHUB_ENV
+              echo "BASE_URL=${{ secrets.BASE_URL_QAT }}" >> $GITHUB_ENV
+              echo "USERNAME=${{ secrets.LOGIN_USERNAME_QAT }}" >> $GITHUB_ENV
+              echo "PASSWORD=${{ secrets.LOGIN_PASSWORD_QAT }}" >> $GITHUB_ENV
               ;;
             UAT)
-              echo "USERNAME=${USERNAME_UAT}" >> $GITHUB_ENV
-              echo "PASSWORD=${PASSWORD_UAT}" >> $GITHUB_ENV
+              echo "ENV=uat" >> $GITHUB_ENV
+              echo "BASE_URL=${{ secrets.BASE_URL_UAT }}" >> $GITHUB_ENV
+              echo "USERNAME=${{ secrets.LOGIN_USERNAME_UAT }}" >> $GITHUB_ENV
+              echo "PASSWORD=${{ secrets.LOGIN_PASSWORD_UAT }}" >> $GITHUB_ENV
               ;;
           esac
-      - name: Run Playwright Tests
-        env:
-          TEST_ENV: ${{ github.event.inputs.env }}
-          USERNAME: ${{ env.USERNAME }}
-          PASSWORD: ${{ env.PASSWORD }}
-        run: |
-          echo "Running Playwright tests on environment: $TEST_ENV"
-          npx playwright test
-      # Upload Ortoni report
-      - name: Upload Ortoni Report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: ortoni-report
-          path: my-report/
-          retention-days: 30
 
-      # Upload Playwright HTML report
-      - name: Generate and Upload Playwright HTML Report
-        run: npx playwright show-report playwright-report || true
-      - uses: actions/upload-artifact@v4
+      - name: Run Playwright Tests
+        run: |
+          echo "Running Playwright tests on $ENV"
+          npx playwright test
+
+      - name: Upload Playwright HTML Report
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-html-report
           path: playwright-report/
-          retention-days: 30
-
-      # Upload Playwright test artifacts (screenshots, videos, traces)
-      - name: Upload Playwright Test Results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-artifacts
-          path: test-results/
-          retention-days: 31
