--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,22 +18,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the repository
       - uses: actions/checkout@v4
 
+      # Setup Node.js
       - uses: actions/setup-node@v4
         with:
           node-version: 18
 
+      # Cache node modules for faster CI
+      - name: Cache NPM modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      # Clean previous reports
       - name: Clean previous reports
         run: |
-          rm -rf my-report/
-          rm -rf playwright-report/
-          rm -rf test-results/
+          rm -rf my-report/ playwright-report/ test-results/
 
+      # Install dependencies and Playwright browsers
       - run: npm ci
       - run: npx playwright install --with-deps
 
-      # ✅ Correct way to map secrets
+      # Set environment variables based on workflow input
       - name: Set environment variables
         run: |
           ENV_SELECTED="${{ github.event.inputs.env }}"
@@ -60,14 +71,40 @@ jobs:
               ;;
           esac
 
+      # Validate required environment variables
+      - name: Validate environment variables
+        run: |
+          if [ -z "$BASE_URL" ] || [ -z "$USERNAME" ] || [ -z "$PASSWORD" ]; then
+            echo "Error: Required environment variables are missing!"
+            exit 1
+          fi
+
+      # Run Playwright tests
       - name: Run Playwright Tests
+        env:
+          ENV: ${{ env.ENV }}
+          BASE_URL: ${{ env.BASE_URL }}
+          USERNAME: ${{ env.USERNAME }}
+          PASSWORD: ${{ env.PASSWORD }}
+          CI: true
         run: |
           echo "Running Playwright tests on $ENV"
           npx playwright test
 
+      # Upload Playwright HTML report
       - name: Upload Playwright HTML Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-html-report
           path: playwright-report/
+          retention-days: 30
+
+      # Upload Playwright test artifacts (screenshots, videos, traces)
+      - name: Upload Playwright Test Artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-artifacts
+          path: test-results/
+          retention-days: 31
