--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "packages": {},
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@playwright/test": "^1.56.1",
+    "@playwright/test": "^1.57.0",
     "@types/node": "^20.11.30",
     "ortoni-report": "^4.0.1",
     "typescript": "^5.4.5"
   },
   "scripts": {},
   "dependencies": {
+    "@siddheshwar.anajekar/common-base": "^1.0.5",
     "dotenv": "^17.2.3"
   }
 }
