--- a/config/qat.env
+++ b/config/qat.env
@@ -1,3 +1,5 @@
-BASE_URL=https://ally.qat.anddone.com
-USERNAME=Allytestuser01v12
-PASSWORD=123*Qwertyuiop
+ALLY_BASE_URL_QAT=https://ally.qat.anddone.com
+ALLY_QAT_USER_A=Allytestuser01v12
+ALLY_QAT_PASS_A=123*Qwertyuiop
+ALLY_QAT_USER_B=KarthikPatel36
+ALLY_QAT_PASS_B="123#Qwertyuiop"
