--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.57.0",
     "@types/node": "^20.11.30",
+    "dotenv": "^17.2.3",
     "ortoni-report": "^4.0.1",
     "typescript": "^5.4.5"
   },
   "scripts": {},
   "dependencies": {
-    "@siddheshwar.anajekar/common-base": "^1.0.5",
-    "dotenv": "^17.2.3"
+    "@siddheshwar.anajekar/common-base": "^1.0.5"
   }
 }
