--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,32 +17,35 @@ jobs:
   dev:
     if: ${{ github.event.inputs.environment == 'DEV' }}
     runs-on: ubuntu-latest
-    environment: DEV   # literal string, required for secrets
+    environment: DEV   # must exist in GitHub repo Settings → Environments → DEV
     env:
       TEST_ENV: DEV
     steps:
       - uses: actions/checkout@v4
       - run: npm ci
-      - run: npx playwright test
+      - name: Run Playwright DEV tests
+        run: npx playwright test
 
   qat:
     if: ${{ github.event.inputs.environment == 'QAT' || github.event.inputs.environment == '' }}
     runs-on: ubuntu-latest
-    environment: QAT
+    environment: QAT   # must exist in GitHub repo Settings → Environments → QAT
     env:
       TEST_ENV: QAT
     steps:
       - uses: actions/checkout@v4
       - run: npm ci
-      - run: npx playwright test
+      - name: Run Playwright QAT tests
+        run: npx playwright test
 
   uat:
     if: ${{ github.event.inputs.environment == 'UAT' }}
     runs-on: ubuntu-latest
-    environment: UAT
+    environment: UAT   # must exist in GitHub repo Settings → Environments → UAT
     env:
       TEST_ENV: UAT
     steps:
       - uses: actions/checkout@v4
       - run: npm ci
-      - run: npx playwright test
+      - name: Run Playwright UAT tests
+        run: npx playwright test
